error/src/main/java/com/example/error/exception/ForbiddenException.kt
package com.example.error.exception

class ForbiddenException(e: Throwable) : RuntimeException(e)